--- a/.github/workflows/cflite_batch.yaml
+++ b/.github/workflows/cflite_batch.yaml
@@ -1,7 +1,8 @@
 name: ClusterFuzzLite batch fuzzing
 on:
   schedule:
-  - cron: '0 0/6 * * *'
+  - cron: '0 0/1 * * *'
+  workflow_dispatch:
 permissions: read-all
 jobs:
   BatchFuzzing:
